<resources>
    <string name="app_name">SayHello</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="name">Name</string>
    <string name="already_have_an_account"><u>Already have an account.</u></string>
    <string name="text">Welcome here you can edit your all personal detail and you can also update you profile information</string>
    <string name="favourite_hobby">Favourite Hobby?</string>
    <string name="your_country_name">Where you live?</string>
    <string name="current_relationship_status">current relationship status?</string>
    <string name="male_or_female">Male or Female?</string>
    <string name="update">Update</string>
    <string name="xcv">Edit Profile</string>
    <string name="this_user_did_not_write_anything_about_himself">This user did\'not write anything about himself.</string>
    <string name="say">SayHello</string>
    <string name="what_s_on_your_mind">What\'s on your mind...</string>
    <string name="add_to_your_post">Add to your post</string>
    <string name="this_page_is_in_construction_very_soon_will_show_right_data">This page is in construction Very soon will show Right Data.</string>
    <string name="not_added">Not Added</string>
    <string name="not_addeda">Not added</string>
    <string name="country">Country.</string>
    <string name="search">Search user by name</string>
    <string name="resend_verification_link"><u>Resend verification link</u></string>
    <string name="share_moments_with_nthe_world">Share moments with\nthe world</string>
    <string name="say_to_the_world_feel_free">Say to the world feel free...</string>
    <string name="share_your_best_moments">Share your moments</string>
    <string name="lite_messenger">Lite Messenger</string>
    <string name="no_recent_chat_is_available">No recent chat is available</string>
    <string name="you_can_edit_your_all_public_detail_from_settings">You can edit your all public detail from settings</string>
    <string name="read">Read more</string>
</resources>