<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:padding="@dimen/_20sdp"
    tools:context=".Activities.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/networking"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="Welcome to social world!"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="stay connected with the world."
        android:gravity="center"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@null"
        android:id="@+id/emailEt"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start"
            android:paddingTop="@dimen/_22sdp"
            android:importantForAutofill="no"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@null"
        android:layout_marginTop="@dimen/_5sdp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingStart="@dimen/_2sdp"
            android:paddingTop="@dimen/_22sdp"
            android:paddingEnd="@dimen/_2sdp" />

    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:animateLayoutChanges="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:backgroundTint="@color/black"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:padding="@dimen/_12sdp"
            android:text="Login"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_6sdp"
            app:rippleColor="@color/white" />


    </FrameLayout>


        <TextView
            android:id="@+id/createNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_10sdp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>