<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:padding="@dimen/_20sdp"
    tools:context=".Activities.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/networking"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="Welcome to social world!"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="stay connected with the world."
            android:gravity="center"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@null"
            android:id="@+id/nameEt"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="start"
                android:paddingTop="@dimen/_22sdp"
                android:importantForAutofill="no"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@null"
            android:id="@+id/professionEt"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:gravity="start"
                android:paddingTop="@dimen/_22sdp"
                android:importantForAutofill="no"
                android:hint="Profession"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@null"
            android:id="@+id/emailEt"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:gravity="start"
                android:paddingTop="@dimen/_22sdp"
                android:importantForAutofill="no"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@null"
            android:layout_marginTop="@dimen/_2sdp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingStart="@dimen/_2sdp"
                android:paddingTop="@dimen/_22sdp"
                android:paddingEnd="@dimen/_2sdp" />

        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:animateLayoutChanges="true">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:backgroundTint="@color/black"
                android:visibility="gone"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="Sign Up"
                android:textSize="@dimen/_12ssp"
                app:rippleColor="@color/white"
                app:cornerRadius="@dimen/_6sdp"
                android:padding="@dimen/_12sdp"/>


        </FrameLayout>


        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_10sdp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>